--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -13058,7 +13058,7 @@ ul {
     padding: 30px 20px;
     background-color: #f0f8ff47;
 }
-.input-label {
+#fileLabel.input-label {
     font-family: "Barlow Condensed", sans-serif;
     color: #fff;
     display: inline-block;
@@ -13068,8 +13068,8 @@ ul {
     -webkit-box-shadow: 0px 9px 37px rgba(0, 0, 0, 0.2);
     box-shadow: 0px 9px 37px rgba(0, 0, 0, 0.2);
     border-radius: 50px;
-    font-size: 18px;
-    font-weight: 400;
+    font-size: 16px;
+    font-weight: 400 !important;
     text-transform: capitalize;
     padding: 0 35px;
     letter-spacing: 1px;
@@ -13079,4 +13079,24 @@ ul {
     border: none;
     height: 50px;
     line-height: 46px;
+}
+.pay-toggle {
+    border: 1px solid;
+    position: absolute;
+    right: 5px;
+    width: 50px;
+    height: 25px;
+    border-radius: 25px;
+    padding: 2px;
+}
+.toggle-pay {
+    width: 21px;
+    height: 21px;
+    border-radius: 50%;
+    background-color: #0d6efd;
+    transition: all 300ms ease-in;
+    transform: translateX(2px);
+}
+input#ccpay:checked + .toggle-pay {
+    transform: translateX(23px);
 }
